<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/line"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Line"/>
    <item
        android:id="@+id/circle"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Circle"/>
    <item
        android:id="@+id/rectangle"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Rectangle"/>
    <item
        android:id="@+id/arrow"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Arrow"/>
    <item
        android:id="@+id/x"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/X"/>
    <item
        android:id="@+id/free_hand"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/FreeHand"/>
    <item
        android:id="@+id/red"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Red"/>
    <item
        android:id="@+id/yellow"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Yellow"/>
    <item
        android:id="@+id/green"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Green"/>
    <item
        android:id="@+id/blue"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Blue"/>
    <item
        android:id="@+id/black"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Black"/>
    <item
        android:id="@+id/clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Clear"/>
    <item
        android:id="@+id/undo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Undo"/>
    <item
        android:id="@+id/redo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Redo"/>

</menu>